--- a/get-involved.html
+++ b/get-involved.html
@@ -109,7 +109,7 @@
 
                         <h2> <strong>Love You
                                 Children Mission</strong></h2>
-                        <span>Education is the birthright of every child</span>
+                        <span>Education is the birthright of every child !</span>
 
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                                     <h3>Psychologist</h3>
                                     <p> Provide crucial support to children facing psychological challenges,
                                         offering
-                                        guidance and assistance to help them overcome obstacles and thrive
+                                        guidance and assistance to help them overcome obstacles and thrive.
                                     </p>
                                     <p>
                                 </div>
