--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 									<h1><strong class="text-uppercase" style="color:orangered">Support</strong></h1>
 									<h1 class="text-light font-weight-bold"> <strong>Love You Children
 											Mission</strong></h1>
-									<h3 class="text-light">Education is the birthright of every child
+									<h3 class="text-light">Education is the birthright of every child !
 									</h3>
 									<a class="btn btn-primary btn-lg" href="contact.html">Contact Us</a>
 
@@ -131,7 +131,7 @@
 									<h1><strong class="text-uppercase" style="color:orangered">Support</strong></h1>
 									<h1 class="text-light font-weight-bold "> <strong>Love You Children
 											Mission</strong></h1>
-									<h3 class="text-light">Education is the birthright of every child
+									<h3 class="text-light">Education is the birthright of every child !
 									</h3>
 									<a class="btn btn-primary btn-lg" href="contact.html">Contact Us</a>
 
@@ -145,7 +145,7 @@
 									<h1><strong class="text-uppercase" style="color:orangered">Support</strong></h1>
 									<h1 class="text-light font-weight-bold "> <strong>Love You Children
 											Mission</strong></h1>
-									<h3 class="text-light">Education is the birthright of every child
+									<h3 class="text-light">Education is the birthright of every child !
 									</h3>
 									<a class="btn btn-primary btn-lg" href="contact.html">Contact Us</a>
 
@@ -297,7 +297,7 @@
 										<h3>Psychologist</h3>
 										<p> Provide crucial support to children facing psychological challenges,
 											offering
-											guidance and assistance to help them overcome obstacles and thrive
+											guidance and assistance to help them overcome obstacles and thrive.
 										</p>
 										<p>
 									</div>
