--- a/our-programs.html
+++ b/our-programs.html
@@ -109,7 +109,7 @@
 
 						<h2> <strong>Love You
 								Children Mission</strong></h2>
-						<span>Education is the birthright of every child</span>
+						<span>Education is the birthright of every child !</span>
 
 					</div>
 				</div>
