--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
 
 						<h2> <strong>Love You
 								Children Mission</strong></h2>
-						<span>Education is the birthright of every child</span>
+						<span>Education is the birthright of every child !<child</span>
 
 					</div>
 				</div>
