--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,8 @@
 						<div class="col-md-6 col-sm-6 text-right fh5co-social">
 							<a href="https://www.facebook.com/loveyouchildrenmission?mibextid=ZbWKwL" class="grow"><i
 									class="icon-facebook2"> </i></a>
-									<a href="https://www.youtube.com/@loveyouchildrenmission4318" class="grow"><i class="icon-youtube"></i></a>
+							<a href="https://www.youtube.com/@loveyouchildrenmission4318" class="grow"><i
+									class="icon-youtube"></i></a>
 							<a href="#" class="grow"><i class="icon-instagram2"></i></a>
 						</div>
 					</div>
@@ -109,7 +110,7 @@
 
 						<h2> <strong>Love You
 								Children Mission</strong></h2>
-						<span>Education is the birthright of every child</span>
+						<span>Education is the birthright of every child !</span>
 
 					</div>
 				</div>
@@ -128,7 +129,7 @@
 								<ul class="contact-info">
 									<li><i class="icon-location-pin"></i><a
 											href="https://www.google.com/maps/@28.5782954,77.0301103,3a,75y,28.19h,83.68t/data=!3m6!1e1!3m4!1sTdOexIA9D4WHEadaOY5h8w!2e0!7i13312!8i6656?coh=205409&entry=ttu">Plot
-											no A 59 Sector 19, Dwarka New Delhi 110075</a>
+											no A 59, Sector 19, Dwarka New Delhi 110075</a>
 									</li>
 									<li><i class="icon-phone2"></i><a href="tel:+91 9990145220">+91 9990145220</a></li>
 									<li><i class="icon-mail"></i><a
@@ -138,7 +139,13 @@
 							</div>
 							<div class="col-md-6">
 								<div class="row">
-									<div class="col-md-6">
+
+									<iframe
+										src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224096.98009567213!2d76.92842349607251!3d28.644285209449826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd5b347eb62d%3A0x37205b715389640!2sDelhi!5e0!3m2!1sen!2sin!4v1723121711525!5m2!1sen!2sin"
+										width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+										referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+									<!-- <div class="col-md-6">
 										<div class="form-group">
 											<input type="text" class="form-control" placeholder="Name">
 										</div>
@@ -158,7 +165,7 @@
 										<div class="form-group">
 											<input type="submit" value="Send Message" class="btn btn-primary">
 										</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
