--- a/sponser-child.html
+++ b/sponser-child.html
@@ -115,7 +115,7 @@
 
                         <h2> <strong>Love You
                                 Children Mission</strong></h2>
-                        <span>Education is the birthright of every child</span>
+                        <span>Education is the birthright of every child !</span>
 
                     </div>
                 </div>
