--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
 
 								</ul>
 							</div>
-							<div class="col-md-6">
+							<div class="col-md-6 contact-map" >
 								<div class="row">
 
 									<iframe
